<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="epam.androidlab.com.task1.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/destinationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:id="@+id/textDest" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hintDesText"
            android:ems="10"
            android:id="@+id/editTextDest" />

        <TextView
            android:text="@string/themeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:id="@+id/textTheme" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailSubject"
            android:hint="@string/hintThemeText"
            android:ems="10"
            android:id="@+id/editTextTheme" />

        <TextView
            android:text="@string/messageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:id="@+id/textMessage" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect"
            android:elegantTextHeight="true"
            android:hint="@string/hintMesText"
            android:textAlignment="gravity"
            android:ems="10"
            android:id="@+id/editTextMessage"
            />

        <Button
            android:text="@string/sendText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSend"/>
    </LinearLayout>
</RelativeLayout>
